Add ESLint in order to check JS files

--- a/sso_with_keycloak/.vscode/extensions.json
+++ b/sso_with_keycloak/.vscode/extensions.json
@@ -1,9 +1,10 @@
 {
-    "recommendations": [
-        "golang.go",
-        "william-voyek.vscode-nginx",
-        "teclado.vscode-nginx-format",
-        "esbenp.prettier-vscode",
-        "hediet.vscode-drawio"
-    ]
+  "recommendations": [
+    "golang.go",
+    "william-voyek.vscode-nginx",
+    "teclado.vscode-nginx-format",
+    "esbenp.prettier-vscode",
+    "hediet.vscode-drawio",
+    "dbaeumer.vscode-eslint"
+  ]
 }
