--- a/sso_with_keycloak/docker/nginx/app1.conf.template
+++ b/sso_with_keycloak/docker/nginx/app1.conf.template
@@ -16,8 +16,7 @@ server {
 
 server {
   server_name ${APP_DOMAIN_NAME};
-  listen 443;
-  ssl on;
+  listen 443 ssl;
   ssl_certificate /etc/nginx/server.crt;
   ssl_certificate_key /etc/nginx/server.key;
   ssl_protocols TLSv1.2;
