--- a/sso_with_keycloak/docker/nginx/keycloak.conf.template
+++ b/sso_with_keycloak/docker/nginx/keycloak.conf.template
@@ -11,8 +11,7 @@ server {
 
 server {
   server_name ${KEYCLOAK_DOMAIN_NAME};
-  listen 443;
-  ssl on;
+  listen 443 ssl;
   ssl_certificate /etc/nginx/server.crt;
   ssl_certificate_key /etc/nginx/server.key;
   ssl_protocols TLSv1.2;
