--- a/sso_with_keycloak/docker/sample.env
+++ b/sso_with_keycloak/docker/sample.env
@@ -1,5 +1,9 @@
-APP_NAME=app1
-APP_DOMAIN_NAME=app1.*********
+APP1_NAME=app1
+APP1_DOMAIN_NAME=app1.*********
+APP1_DB_NAME=app1
+APP1_DB_USER=app1_user
+APP1_DB_PASSWORD=app1_password
+
 KEYCLOAK_DOMAIN_NAME=auth.*********
 
 DB_ROOT_PASSWORD=root
@@ -12,3 +16,5 @@ KEYCLOAK_PASSWORD=admin
 CLIENT_ID=application
 CLIENT_SECRET=*********
 STATE_STRING=FOR_CSRF
+
+FRONTEND_DUMMY_API=false
