--- a/sso_with_keycloak/app/frontend/package.json
+++ b/sso_with_keycloak/app/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
     "watch": "webpack --mode development --watch",
-    "start": "webpack serve --env APP_DOMAIN_NAME=${APP_DOMAIN_NAME}"
+    "start": "webpack serve"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +16,13 @@
   "devDependencies": {
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
-    "@babel/preset-react": "^7.16.5",
+    "@babel/preset-react": "^7.16.5"
+  },
+  "dependencies": {
+    "axios": "^0.24.0",
     "babel-loader": "^8.2.3",
+    "dotenv": "^16.0.0",
+    "keycloak-js": "^18.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "webpack": "^5.65.0",
